<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:background="@android:color/transparent">


    <RadioGroup
        android:id="@+id/gr"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        app:chipSpacingVertical="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:singleSelection="true">


        <RadioButton
            android:id="@+id/check_get_tag_home"
            style="@style/background_text_tag_create"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/home"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="162dp" />

        <RadioButton
            android:id="@+id/check_get_tag_shop"

            style="@style/background_text_tag_create"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/shop"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="162dp" />

        <RadioButton
            android:id="@+id/check_get_tag_work"

            style="@style/background_text_tag_create"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/work"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="162dp" />

        <RadioButton
            android:id="@+id/check_get_tag_weekend"

            style="@style/background_text_tag_create"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/weekend"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="162dp" />

        <RadioButton
            android:id="@+id/check_get_tag_bank"

            style="@style/background_text_tag_create"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/bank"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="162dp" />

        <RadioButton
            android:id="@+id/check_get_tag_other"

            style="@style/background_text_tag_create"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/sport"
            android:textAllCaps="false"
            android:textIsSelectable="false"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="162dp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>



