<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="#4DAEABAB"
    android:gravity="center|start"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView3"
        style="@style/rc_view_list_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="11dp"
        android:layout_weight="1"
        android:text="@string/theme_setting"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/rd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"


        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:singleLine="true"
        app:singleSelection="true">


        <RadioButton
            android:id="@+id/button_system_theme"

            style="@style/background_text_tag"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/auto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/check_tag_work"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />


        <RadioButton
            android:id="@+id/button_dark_theme"

            style="@style/background_text_tag"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/check_tag_work"
            tools:ignore="TouchTargetSizeCheck" />


        <RadioButton
            android:id="@+id/button_light_theme"

            style="@style/background_text_tag"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="2dp"
            android:gravity="center"
            android:text="@string/light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/check_tag_work"
            tools:ignore="TouchTargetSizeCheck" />


    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="-5dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/ic_border_option" />


</RelativeLayout>