<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|start"
    tools:context=".MainActivity">


    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbarThumbHorizontal="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/rd1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:scrollbars="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"


                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:singleLine="true"
                app:singleSelection="true">

                <RadioButton

                    android:id="@+id/check_tag_home"
                    style="@style/background_text_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="2dp"
                    android:gravity="center"
                    android:text="@string/home"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="TextContrastCheck" />

                <ImageButton
                    android:id="@+id/clear_home"
                    style="@style/tag_clear"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/check_tag_shop"

                    style="@style/background_text_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:gravity="center"
                    android:text="@string/shop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/check_tag_home"
                    tools:ignore="TextContrastCheck" />

                <ImageButton
                    android:id="@+id/clear_shop"
                    style="@style/tag_clear"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/check_tag_work"

                    style="@style/background_text_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:gravity="center"
                    android:text="@string/work"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/check_tag_shop"
                    tools:ignore="TextContrastCheck" />

                <ImageButton
                    android:id="@+id/clear_work"
                    style="@style/tag_clear"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/check_tag_weekend"

                    style="@style/background_text_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:gravity="center"
                    android:text="@string/weekend"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/check_tag_work"
                    tools:ignore="TextContrastCheck" />

                <ImageButton
                    android:id="@+id/clear_weekend"
                    style="@style/tag_clear"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/check_tag_bank"

                    style="@style/background_text_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:gravity="center"
                    android:text="@string/bank"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/check_tag_work" />


                <ImageButton
                    android:id="@+id/clear_bank"
                    style="@style/tag_clear"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/check_tag_sport"

                    style="@style/background_text_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="2dp"
                    android:gravity="center"
                    android:text="@string/sport"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/check_tag_work" />

                <ImageButton
                    android:id="@+id/clear_sport"
                    style="@style/tag_clear"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/end"
                    style="@style/tag_clear"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:visibility="invisible" />

            </RadioGroup>
        </LinearLayout>


    </HorizontalScrollView>


</RelativeLayout>